# chip-8_emulator

./: CMakeLists.txt  Readme.md
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt  cpu.cpp  main.cpp  memory.cpp
src/hdr/: constants.h  cpu.h  memory.h
